--- a/greeting.html
+++ b/greeting.html
@@ -1,9 +1,10 @@
 <html> 
 <head>
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
     <title>Greeting Message</title> 
     <style>
 #lbl {
-    font-family: ubuntu;
+    font-family: Ubuntu, sans-serif;
     font-size: xx-large;
     color: #837b6b;
     padding: 5px;
